--- a/package.json
+++ b/package.json
@@ -4,12 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "ttsc"
+    "build": "ttsc",
+    "build-scss": "postcss src/*.scss --dir dist/"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@zerollup/ts-transform-paths": "^1.7.18",
+    "postcss": "^8.4.12",
+    "postcss-cli": "^9.1.0",
     "ttypescript": "^1.5.13",
     "typescript": "^4.6.2"
   }
